Opening optional JMX port